<resources>
    <string name="app_name">Population monitor</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="County">County</string>
    <string name="total_household_population">Total Household population</string>
    <string name="females">Females</string>
    <string name="males">Males</string>
    <string name="ward">Ward</string>
    <string name="constituency">Constituency</string>
    <string name="household_type">Household Type</string>
    <string name="household_no">Household No</string>
    <string name="e_a_status">E.A Status</string>
    <string name="e_a_type">E.A Type</string>
    <string name="e_a_number">E.A.number</string>
    <string name="sub_location">Sub-location</string>
    <string name="location">Location</string>
    <string name="division">Division</string>
    <string name="district">District</string>
    <string name="next">Next</string>


    <string-array name="spinner">
        <item>Visual</item>
        <item>Hearing</item>
        <item>Speech</item>
        <item>Physical</item>
        <item>Mental</item>
        <item>Self care</item>
        <item>Others</item>
        <item>None</item>
    </string-array>

    <string-array name="spinner2">
        <item>Yes</item>
        <item>No</item>
        <item>NA</item>
        <item>DK</item>
    </string-array>

    <string-array name="spinner3">
        <item>At school/ Learning institution</item>
        <item>Left school/ Learning instituition</item>
        <item>Never went to school/ learning instuition</item>
        <item>DK</item>
    </string-array>

    <string-array name="spinner4">
        <item>Purchased</item>
        <item>Constructed</item>
        <item>Inherited</item>
    </string-array>

    <string-array name="spinner5">
        <item>Government</item>
        <item>Local authority</item>
        <item>Parastatal</item>
        <item>Private company</item>
        <item>Individual</item>
        <item>Faith based organization/ NGO</item>
        <item>Other form</item>
    </string-array>

    <string-array name="spinner6">
        <item>Corrugated iron sheet</item>
        <item>Tiles</item>
        <item>Asbestos sheets</item>
        <item>Grass</item>
        <item>Makuti</item>
        <item>Tin</item>
        <item>Mud/ Dung</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinner7">
        <item>Stone</item>
        <item>Brick/ Block</item>
        <item>Mud/ Wood</item>
        <item>Cement</item>
        <item>Wood only</item>
        <item>Corrugated Iron sheets</item>
        <item>Grass/ Reeds</item>
        <item>Tin</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinner8">
        <item>Cement</item>
        <item>Tiles</item>
        <item>Wood</item>
        <item>Earth</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinner9">
        <item>Pond</item>
        <item>Dam</item>
        <item>Lake</item>
        <item>Stream/ Lake</item>
        <item>Protected stream</item>
        <item>Unprotected stream</item>
        <item>Protected well</item>
        <item>Borehole</item>
        <item>Piped into dwelling</item>
        <item>Piped</item>
        <item>Jabia</item>
        <item>Rain/ harvesteed</item>
        <item>Water vendor</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinner10">
        <item>Main sewer</item>
        <item>Septic tank</item>
        <item>Cess pool</item>
        <item>VIP pit latrine</item>
        <item>Pit latrine covered</item>
        <item>Pit latrine uncovered</item>
        <item>Bucket latrine</item>
        <item>Bush</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinner11">
        <item>Electricity</item>
        <item>Pressure lamp</item>
        <item>Lantern</item>
        <item>Tin lamp</item>
        <item>Gas lamp</item>
        <item>Fuel wood</item>
        <item>Solar</item>
        <item>Other</item>
    </string-array>
    <string-array name="head_of_house">
        <item>I am the head</item>
        <item>Spouse</item>
        <item>Son/Daughter</item>
        <item>Grandchild</item>
        <item>Brother/Sister</item>
        <item>Father/Mother</item>
        <item>Nephew/Niece</item>
        <item> In-Law</item>
        <item>Grandparents</item>
        <item>Other relations</item>
        <item>Non-relative</item>
        <item>DK</item>
    </string-array>

    <string-array name="yesno">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
